committing align fix

--- a/wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
+++ b/wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
@@ -1460,6 +1460,12 @@ h2.benefitsCheckUpTitle {
     margin-top: 5px;
 }
 
+#label_bcuqc_income_1000 {
+    margin-top: 10px;
+}
+
+
+
 :-ms-fullscreen, :root .ie11up {
 
  img#esiQuickcheckResultsButton {
